--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Forside</a></li>
             <li><a href="lommeregner.html">Lommeregner</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="about.html">Contact</a></li>
+            <li><a href="contacts.html">Contact</a></li>
         </ul>
     </nav>
 </body>
