--- a/lommeregner.html
+++ b/lommeregner.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Forside</a></li>
-            <li><a href="lommeregner.html">Lommeregner</a></li>
+            <li><a href="portofolio.html">Lommeregner</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="about.html">Contact</a></li>
         </ul>
